minor fixes and improvements
changes in _logger.py:
added extended formatting
added json serialization for DEBUG level
minor fixes

--- a/config.ini
+++ b/config.ini
@@ -4,14 +4,18 @@ target_path=~/Yandex.Disk.localized/Photoshop/RAW/2023
 file_ext=.DNG
 delete_source=1
 
-[LOGGING_ERROR]
-log_file=~/Yandex.Disk.localized/Photoshop/RAW/2023/error.log
-log_format={time:DD-MMM-YYYY HH:mm:ss Z} {message}
-log_rotate=2 MB
-log_compression=zip
-
 [LOGGING_DEBUG]
 log_file=~/Yandex.Disk.localized/Photoshop/RAW/2023/error.log
-log_format={time:DD-MMM-YYYY HH:mm:ss!UTC} {level} {message} 
+log_format={time:DD-MMM-YYYY HH:mm:ss!UTC} {level} {message} {extra} {exception}
 log_rotate=25 MB
 log_compression=zip
+log_diagnose=1
+log_serialize=1
+
+[LOGGING_ERROR]
+log_file=~/Yandex.Disk.localized/Photoshop/RAW/2023/error.log
+log_format={time:DD-MMM-YYYY HH:mm:ss Z} {level} {message}
+log_rotate=2 MB
+log_compression=zip
+log_diagnose=0
+log_serialize=0
